@@ -293,6 +293,9 @@ have_header("sys/ioctl.h")
 have_header("sys/sockio.h")
 have_header("net/if.h", headers)
 
+have_header("sys/param.h", headers)
+have_header("sys/ucred.h", headers)
+
 unless have_type("socklen_t", headers)
   $defs << "-Dsocklen_t=int"
 end
