@@ -262,6 +262,7 @@ def_intern('intern_ipv6_optname',  /\AIPV6_/, "IPV6_")
 def_intern('intern_tcp_optname',  /\ATCP_/, "TCP_")
 def_intern('intern_udp_optname',  /\AUDP_/, "UDP_")
 def_intern('intern_scm_optname',  /\ASCM_/, "SCM_")
+def_intern('intern_local_optname',  /\ALOCAL_/, "LOCAL_")
 
 result = ERB.new(<<'EOS', nil, '%').result(binding)
 /* autogenerated file */
